delete publication and adjusts in swagger
